[package]
name = "universal_editor"
version = "0.0.4"
edition = "2024"
build = "build.rs"

[build-dependencies]
winresource = "0.1.30"

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
ropey = "1.6.1"
rfd = "0.17.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = "0.4.42"
dirs = "6.0"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff", "ico"] }
ab_glyph = "0.2.32"
