[package]
name = "universal_editor"
version = "0.0.7"
edition = "2024"
build = "build.rs"

[build-dependencies]
winresource = "0.1.30"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[dependencies]
eframe = "0.33.3"
egui = "0.33.3"
ropey = "1.6.1"
rfd = "0.17.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["preserve_order", "arbitrary_precision"] }
serde_yaml = "0.9.34"
toml = "1.0.3"
quick-xml = { version = "0.39.2", features = ["serialize"] }
csv = "1.4.0"
chrono = "0.4.42"
dirs = "6.0"
image = { version = "0.25.9", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff", "ico", "avif"] }
ab_glyph = "0.2.32"
